--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.5.6",
     "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4"
+    "react-native": "0.57.4",
+    "react-native-i18n": "^2.0.15",
+    "react-navigation": "^2.18.2",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "relative-date": "^1.1.3"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-native": "^3.5.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.49.0",
     "react-test-renderer": "16.6.0-alpha.8af6728"
